--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -551,8 +551,8 @@ In the teaching condition of Experiment 2, we gave participants the exact same i
 
 \clearpage
 
-\hypertarget{variability}{%
-\section{Variability}\label{variability}}
+\hypertarget{tempo-variability}{%
+\section{Tempo Variability}\label{tempo-variability}}
 
 \hypertarget{data-analysis-2}{%
 \subsection{Data analysis}\label{data-analysis-2}}
@@ -565,13 +565,25 @@ The tempo variability of performance was assessed with the coefficient of variat
 \hypertarget{articulation-2}{%
 \subsubsection{Articulation}\label{articulation-2}}
 
-To compare the mean CVs between the teaching and performing condition, we conducted a Wilcoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} = 0.007). The Wilcoxon Signed-rank test showed that the tempo variability of performance did not significantly differ between the teaching {[}\emph{Mdn} = 0.06 (ms), \emph{IQR} = 0.02{]} and performing condition {[}\emph{Mdn} = 0.07 (ms), \emph{IQR} = 0.02{]} while playing the piece with the notated articulation (\emph{p} = 0.058, \emph{r} = 0.34, two-tailed).
+To compare the mean CVs between the teaching and performing condition, we conducted a Wilcoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} = 0.007). The Wilcoxon Signed-rank test showed that the tempo variability of performance did not differ significantly between the teaching {[}\emph{Mdn} = 0.064, \emph{IQR} = 0.024{]} and performing condition {[}\emph{Mdn} = 0.066, \emph{IQR} = 0.016{]} while playing the piece with the notated articulation (\emph{p} = 0.06, \emph{r} = 0.34, two-tailed).
 
 \hypertarget{dynamics-2}{%
 \subsubsection{Dynamics}\label{dynamics-2}}
 
+To compare the mean CVs between the teaching and performing condition, we conducted a Wilcoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} = 0.024). The Wilcoxon Signed-rank test showed that the tempo variability of performance did not differ significantly between the teaching {[}\emph{Mdn} = 0.070, \emph{IQR} = 0.013{]} and performing condition {[}\emph{Mdn} = 0.074, \emph{IQR} = 0.026{]} while playing the piece with the notated dynamics (\emph{p} = 0.22, \emph{r} = 0.22, two-tailed).
+
 \hypertarget{results-experiment-2}{%
 \subsection{Results (Experiment 2)}\label{results-experiment-2}}
+
+\hypertarget{articulation-3}{%
+\subsubsection{Articulation}\label{articulation-3}}
+
+To compare the mean CVs between the teaching and performing condition, we conducted a Wilcoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} = 0.017). The Wilcoxon Signed-rank test showed that the tempo variability of performance did not differ significantly between the teaching {[}\emph{Mdn} = 0.044, \emph{IQR} = 0.012{]} and performing condition {[}\emph{Mdn} = 0.047, \emph{IQR} = 0.014{]} while playing the piece with the notated articulation (\emph{p} = 0.07, \emph{r} = 0.41, two-tailed).
+
+\hypertarget{dynamics-3}{%
+\subsubsection{Dynamics}\label{dynamics-3}}
+
+A paired-sample \emph{t}-test showed that the tempo variability of performance did not differ significantly between the teaching {[}\emph{M} = 0.048, \emph{SD} = 0.011{]} and the performing condition {[}\emph{M} = 0.048, \emph{SD} = 0.011{]} while playing the piece with the notated dynamics (\emph{t}(19) = 1.83, \emph{p} = 0.08, Cohen's \emph{d} = 0.41, two-tailed, \emph{Fig \ref{fig:ioi-2}}).
 
 \hypertarget{temporal-grouping}{%
 \section{Temporal grouping}\label{temporal-grouping}}
