--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -585,6 +585,10 @@ To compare the mean CVs between the teaching and performing condition, we conduc
 
 A paired-sample \emph{t}-test showed that the tempo variability of performance did not differ significantly between the teaching {[}\emph{M} = 0.048, \emph{SD} = 0.011{]} and the performing condition {[}\emph{M} = 0.048, \emph{SD} = 0.011{]} while playing the piece with the notated dynamics (\emph{t}(19) = 1.83, \emph{p} = 0.08, Cohen's \emph{d} = 0.41, two-tailed, \emph{Fig \ref{fig:ioi-2}}).
 
+\begin{figure}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-cv-1-1} \caption{\label{fig:vel-2}Experiment 1, 2: CVs when playing the piece with either articulation or dynamics (left: Experiment 1, right: Experiment 2). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-cv-1}
+\end{figure}
+
 \hypertarget{temporal-grouping}{%
 \section{Temporal grouping}\label{temporal-grouping}}
 
